@@ -11,11 +11,14 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.*;
+
 import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
+
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class FilterTripServiceTest {
@@ -176,7 +179,7 @@ class FilterTripServiceTest {
     void execute_WithIsFavoriteFilter_ShouldPassCorrectParameter() {
         filterParams.setIsFavorite(true);
         pageable = PageRequest.of(0, 10, Sort.by("id").ascending());
-        List<Trip> tripList = Arrays.asList(trip1);
+        List<Trip> tripList = List.of(trip1);
         Page<Trip> tripPage = new PageImpl<>(tripList, pageable, tripList.size());
 
         when(tripsRepository.filter(
